[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {  version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
tokio-cron-scheduler = "0.15.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
surrealdb = { version = "3.0.0-beta.1", features = ["kv-rocksdb"] }
surrealdb-types = "3.0.0-beta.1"